<resources>
    <string name="app_name">OnlineShop</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="first_and_last_name_hint">Name</string>
    <string name="your_review_hint">Review</string>
    <string name="score_hint">Rate</string>
    <string name="title_cart">Cart</string>
    <string name="register_review">Submit</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="title_account">Account</string>
    <string name="confirmation">Submit</string>
    <string name="create_account">Create Account</string>
    <string name="sort_new">جدیدترین ها</string>
    <string name="sort_best_sellers">پرفروش ترین ها</string>
    <string name="sort_price_high_low">قیمت از زیاد به کم</string>
    <string name="sort_price_low_high">قیمت از کم به زیاد</string>
    <string name="sort">مرتب سازی</string>
    <string name="no_account_question">Do not have any account?</string>
    <string name="no_account">You have not any account</string>
    <string name="your_address">Your Address</string>
    <string name="address_hint">Address</string>
    <string name="search_hint">Search</string>
    <string name="save">Save</string>
    <string name="best_product_title">Best</string>
    <string name="by_default">default</string>
    <string name="successful_register">Your registration was successful</string>
    <string name="account_exist">There is an account with your email</string>
    <string name="no_exist_account">There is no account with this email</string>
    <string name="latest_product_title">New arrivals</string>
    <string name="new_product_title">New arrivals</string>
    <string name="new_product_text">محصول جدید رسید</string>
    <string name="wrong_discount_code">The discount code is incorrect</string>
    <string name="enter_email">Please enter your email</string>
    <string name="review">Review</string>
    <string name="address">آدرس ها</string>
    <string name="channel_id">maktab_channel_id</string>
    <string name="channel_name">Maktab_Channel</string>
    <string name="channel_description">This is notification channel for maktab</string>
    <string name="successful_post_review">Your comment was successfully submitted</string>
    <string name="failed_post_review">Sorry, your comment was not successful</string>
    <string name="account_information">اطلاعات حساب کاربری</string>
    <string name="on_notification">Notify me of updates to new products</string>
    <string name="title_search">جستجو</string>
    <string name="setting">Setting</string>
    <string name="setting_notification">Notification Setting</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="save_setting">ذخیره تنظیمات</string>
    <string name="log_out_question">Do you want to log out of your account?</string>
    <string name="common">Common</string>
    <string name="every_3_hours">every 3 hours</string>
    <string name="every_5_hours">every 5 hours</string>
    <string name="every_8_hours">every 8 hours</string>
    <string name="every_12_hours">every 12 hours</string>
    <string name="edit">Edit</string>
    <string name="title_add_to_cart">افزودن به سبد خرید</string>
    <string name="final_registration_order">ثبت نهایی سفارش</string>
    <string name="successful_final_registration_order">Your order has been successfully registered</string>
    <string name="failed_final_registration_order">Your order registration was not successful</string>
    <string name="login_description">برای ورود پست الکترونیک خود را وارد نمایید</string>
    <string name="empty_discount_code">Please enter your discount code</string>
    <string name="most_visited_product_title">Popular</string>
    <string name="special_product_title">محصولات ویژه</string>
    <string name="see_all">مشاهده همه</string>
    <string name="post_order_item_title">Post order</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in">Sign In</string>
    <string name="login">ورود</string>
    <string name="enter_request_information">Please enter the requested information</string>
    <string name="register">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="amount_paid_with_discount">Total amount paid with 10% discount: </string>
    <string name="in_stock">instock</string>
    <string name="available_in_stock">موجود در انبار</string>
    <string name="not_available_in_stock">در انبار موجود نیست</string>
    <string name="ziro">0</string>
    <string name="add_review">افزودن نظر</string>
    <string name="number">1</string>
    <string name="total_amount_paid">جمع مبلغ پرداختی:</string>
    <string name="final_confirmation">تایید نهایی سبد خرید</string>
    <string name="discount_code">Discount Code</string>
    <string name="review_title">نظرات کاربران</string>
    <string name="check_discount_code">Check Discount Code</string>
    <string name="currency">تومان</string>
    <string name="total">Total</string>
    <string name="continue_the_buying_process">Continue</string>
    <string name="specifications">مشخصات کلی</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="text_sale">1 در سبد شما</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
</resources>