<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isOnNotification"
            type="Boolean" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/charcoal"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/notification" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="vertical"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/radio_btn_3_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/every_3_hours"
                    android:textColor="@color/baby_powder" />

                <RadioButton
                    android:id="@+id/radio_btn_5_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/every_5_hours"
                    android:textColor="@color/baby_powder" />

                <RadioButton
                    android:id="@+id/radio_btn_8_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/every_8_hours"
                    android:textColor="@color/baby_powder" />

                <RadioButton
                    android:id="@+id/radio_btn_12_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/every_12_hours"
                    android:textColor="@color/baby_powder" />

                <RadioButton
                    android:id="@+id/radio_btn_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/by_default"
                    android:textColor="@color/baby_powder" />

                <RadioButton
                    android:id="@+id/radio_btn_desired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="16dp"
                    android:text="@string/by_default"
                    android:textColor="@color/baby_powder" />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <NumberPicker
                android:id="@+id/number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <Switch
                android:id="@+id/switch_on_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="@{isOnNotification}"
                android:padding="16dp"
                android:text="@string/on_notification"
                android:textColor="@color/baby_powder" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_right_button"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/slate_grey" />

                <Button
                    android:id="@+id/btn_save_setting"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_left_button"
                    android:text="@string/save_setting"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/slate_grey" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>