<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        android:orientation="vertical"
        tools:context=".view.fragment.LogOutFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="32dp"
            android:text="@string/log_out_question"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="32dp">

            <Button
                android:id="@+id/btn_log_out"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_right_button"
                android:drawableLeft="@drawable/ic_arrow_back"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:textColor="@color/baby_powder"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/btn_common"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_left_button"
                android:drawableRight="@drawable/ic_arrow_forward"
                android:text="@string/common"
                android:textAllCaps="false"
                android:textColor="@color/baby_powder"
                app:backgroundTint="@color/black" />

        </LinearLayout>

    </LinearLayout>

</layout>