<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="searchableViewModel"
            type="com.example.onlineshop.viewmodel.SearchableViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sort_dialog_background"
        android:orientation="vertical"
        tools:context=".view.fragment.SortDialogFragment">

        <Button
            android:id="@+id/btn_sort_new"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="@{()->searchableViewModel.setSortNewMutableLiveData()}"
            android:padding="16dp"
            android:text="@string/sort_new"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/btn_sort_best_sellers"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="@{()->searchableViewModel.setSortBestSellerMutableLiveData()}"
            android:padding="16dp"
            android:text="@string/sort_best_sellers"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/btn_sort_price_high_low"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/sort_price_high_low"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/btn_sort_price_low_high"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/sort_price_low_high"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

</layout>