<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="singleSharedReviewViewModel"
            type="com.example.onlineshop.viewmodel.SingleSharedReviewViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pastel_orange"
        tools:context=".view.fragment.ReviewFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:background="@color/green">

            <EditText
                android:id="@+id/txt_first_and_last_name"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/rounded_edit_text"
                android:gravity="center"
                android:hint="@string/first_and_last_name_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_your_review"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edit_text"
                android:gravity="center"
                android:hint="@string/review"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_first_and_last_name" />

            <EditText
                android:id="@+id/txt_score"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edit_text"
                android:gravity="center"
                android:hint="@string/score_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_your_review" />

            <Button
                android:id="@+id/btn_register_review"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:background="@drawable/custom_left_button"
                android:drawableRight="@drawable/ic_add_circle"
                android:onClick="@{() -> singleSharedReviewViewModel.setSubmitClickedSingleLiveEvent()}"
                android:text="@string/register_review"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:backgroundTint="@color/pastel_orange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>