<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="approximateAddress"
            type="String" />

        <variable
            name="locatrViewModel"
            type="com.example.onlineshop.viewmodel.LocatrViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rusty"
        android:orientation="vertical"
        tools:context=".view.fragment.AddressBottomSheetDialogFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/your_address"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:hint="@string/address_hint"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_address"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@{approximateAddress}"
                android:textColor="@color/baby_powder" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:background="@drawable/rounded_button"
                android:onClick="@{() -> locatrViewModel.setCancelClickedSingleLiveEvent()}"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:backgroundTint="@color/gray_asparagus" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:background="@drawable/rounded_button"
                android:onClick="@{() -> locatrViewModel.setSaveClickedSingleLiveEvent()}"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:backgroundTint="@color/gray_asparagus" />

        </LinearLayout>

    </LinearLayout>

</layout>