<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="review"
            type="com.example.onlineshop.model.Review" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pastel_orange"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="16dp"
            android:hint="@string/first_and_last_name_hint"
            app:boxStrokeColor="@color/slate_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_first_and_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{review.reviewerName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:hint="@string/your_review_hint"
            app:boxStrokeColor="@color/slate_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{review.reviewContent}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:hint="@string/score_hint"
            app:boxStrokeColor="@color/slate_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt.rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(review.rating)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_button"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/baby_powder"
            android:textSize="18sp"
            app:backgroundTint="@color/onyx" />

    </LinearLayout>

</layout>