<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signupViewModel"
            type="com.example.onlineshop.viewmodel.SignupViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/slate_grey"
        tools:context=".view.fragment.SignupFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:background="@color/meat_brown">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/txt_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="64dp"
                android:text="@string/create_account"
                android:textColor="@color/baby_powder"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_back" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="32dp"
                android:hint="@string/email_hint"
                android:textColorHint="@color/baby_powder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_create_account" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="96dp"
                android:background="@drawable/custom_left_button"
                android:drawableRight="@drawable/ic_arrow_forward"
                android:onClick="@{() -> signupViewModel.setRegisterClickedSingleLiveEvent()}"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:backgroundTint="@color/slate_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>